# server/swagger.json
@@ -1,77 +1,50 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "version": "1.0.0",
-      "title": "Todo-App Backend API",
-      "description": "This is a simple CRUD API for managing todos in an e-commerce platform.",
-      "termsOfService": "",
-      "contact": {
-        "name": "API Support",
-        "url": "http://www.example.com/support",
-        "email": "support@example.com"
-      },
-      "license": {
-        "name": "Apache 2.0",
-        "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
-      }
+  "openapi": "3.0.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "Todo-App Backend API",
+    "description": "This is a simple CRUD API for managing todos in an e-commerce platform.",
+    "termsOfService": "",
+    "contact": {
+      "name": "API Support",
+      "url": "http://www.example.com/support",
+      "email": "support@example.com"
     },
-    "servers": [
-      {
-        "url": "http://localhost:3000",
-        "description": "Local server"
-      }
-    ],
-    "tags": [
-      {
-        "name": "Todos",
-        "description": "API for Todo operations"
-      },
-      {
-        "name": "Users",
-        "description": "API for Users in the system"
-      }
-    ],
-    "paths": {
-      "/todos": {
-        "get": {
-          "tags": ["todos"],
-          "summary": "Get all Todos",
-          "responses": {
-            "200": {
-              "description": "OK",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/todos"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "post": {
-          "tags": ["todos"],
-          "summary": "Create new todo",
-          "requestBody": {
+    "license": {
+      "name": "Apache 2.0",
+      "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
+    }
+  },
+  "servers": [
+    {
+      "url": "http://localhost:3000",
+      "description": "Local server"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Todos",
+      "description": "API for Todo operations"
+    },
+    {
+      "name": "Users",
+      "description": "API for Users in the system"
+    }
+  ],
+  "paths": {
+    "/todos": {
+      "get": {
+        "tags": ["Todos"],
+        "summary": "Retrieve a list of all todos",
+        "responses": {
+          "200": {
+            "description": "A list of todos",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/todos"
-                }
-              }
-            },
-            "required": true
-          },
-          "responses": {
-            "201": {
-              "description": "Created",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/todos"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Todo"
                   }
                 }
               }
@@ -79,142 +52,26 @@
           }
         }
       },
-      "/todos/{id}": {
-        "get": {
-          "tags": ["todos"],
-          "summary": "Get a todo by ID",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "description": "ID of todo to retrieve",
+      "post": {
+        "tags": ["Todos"],
+        "summary": "Create a new Todo",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
               "schema": {
-                "type": "string"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/todos"
-                  }
-                }
+                "$ref": "#/components/schemas/Todo"
               }
             }
           }
         },
-        "patch": {
-          "tags": ["todos"],
-          "summary": "Update a todo by ID",
-          "parameters": [
-            {
-              "name": "todoId",
-              "in": "path",
-              "required": true,
-              "description": "ID of todo to update",
-              "schema": {
-                "type": "string"
-              }
-            }
-          ],
-          "requestBody": {
+        "responses": {
+          "201": {
+            "description": "Todo created successfully",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/todos"
-                }
-              }
-            },
-            "required": true
-          },
-          "responses": {
-            "200": {
-              "description": "OK",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/todos"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "delete": {
-          "tags": ["todos"],
-          "summary": "Delete a todo by ID",
-          "parameters": [
-            {
-              "name": "todoId",
-              "in": "path",
-              "required": true,
-              "description": "ID of todo to delete",
-              "schema": {
-                "type": "string"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK"
-            }
-          }
-        }
-      },
-      "/user/login": {
-        "post": {
-          "tags": ["Users"],
-          "summary": "User Login",
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Users"
-                }
-              },
-              "required": true
-            }
-          },
-          "responses": {
-            "201": {
-              "description": "User Logged in successfully",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/Users"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/user/register": {      
-        "post": {
-          "tags": ["Users"],
-          "summary": "Register a new User",
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Users"
-                }
-              },
-              "required": true
-            }
-          },
-          "responses": {
-            "201": {
-              "description": "User registered successfully",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/Users"
-                  }
+                  "$ref": "#/components/schemas/Todo"
                 }
               }
             }
@@ -222,51 +79,188 @@
         }
       }
     },
-    "components": {
-      "schemas": {
-        "todos": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "integer",
-              "format": "int64"
-            },
-            "name": {
-              "type": "string"
-            },
-            "description": {
-              "type": "string"
-            },
-            "price": {
-              "type": "number",
-              "format": "double"
-            },
-            "relatedType" : {
-              "$ref": "#/components/schemas/todos"
+    "/todos/{id}": {
+      "get": {
+        "tags": ["Todos"],
+        "summary": "Retrieve details of a specific todo",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of the todo to retrieve",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A specific todo",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Todo"
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "tags": ["Todos"],
+        "summary": "Update todo information",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of the todo to update",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Todo"
+              }
             }
           }
         },
-        "Users": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "integer",
-              "format": "int64"
-            },
-            "username": {
-              "type": "string"
-            },
-            "email": {
-              "type": "string"
-            },
-            "password": {
-              "type": "string"
-            },
-            "relatedType" : {
-              "$ref": "#/components/schemas/Users"
+        "responses": {
+          "200": {
+            "description": "Todo updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Todo"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Todos"],
+        "summary": "Delete a todo",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of the todo to delete",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Todo deleted successfully"
+          }
+        }
+      }
+    },
+    "/user/login": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "User Login",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User Logged in successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/register": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Register a new User",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User registered successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
             }
           }
         }
       }
     }
+  },
+  "components": {
+    "schemas": {
+      "Todo": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "price": {
+            "type": "number",
+            "format": "double"
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      }
+    }
   }
+}
